[package]

name = "quack"
version = "0.0.5"
authors = [
    "bvssvni <bvssvni@gmail.com",
    "Jonathan Reem <jonathan.reem@gmail.com>"
]
keywords = ["ducktyping", "duck", "typing", "piston"]
description = "Duck typing traits"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/quack.git"
homepage = "https://github.com/pistondevelopers/quack"

[lib]

name = "quack"
path = "src/lib.rs"

