[package]

name = "quack"
version = "0.1.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Jonathan Reem <jonathan.reem@gmail.com>"
]
keywords = ["ducktyping", "duck", "typing", "piston"]
description = "Duck typing traits"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/quack.git"
homepage = "https://github.com/pistondevelopers/quack"
documentation = "https://docs.rs/quack"
edition = "2018"

[lib]

name = "quack"
path = "src/lib.rs"
